jira-sts.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jira-set
  name: jira-set
  namespace: jira
  annotations:
    haproxy.org/check: "true"
    haproxy.org/forwarded-for: "true"
    haproxy.org/load-balance: "roundrobin"
    haproxy.org/cookie-persistence: "mycookie"
spec:
  selector:
    app: jira-set
  ports:
  - name: port-jira
    port: 8080
    protocol: TCP
    targetPort: 8080

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: jira-set
  name: jira-set
  namespace: jira
spec:
  serviceName: "jira-set"
  replicas: 1
  # kubectl scale statefulset/jira-set --replicas=2 -n jira
  selector:
    matchLabels:
      app: jira-set
  template:
    metadata:
      labels:
        app: jira-set
    spec:
      containers:
      - image: atlassian/jira-software
        imagePullPolicy: Always
        resources:
           requests:
             memory: "4G"
             cpu: 6
           limits:
             memory: "10G"
             cpu: 8
        name: jira-set
        readinessProbe:
          httpGet:
            port: 8080
            path: /status
          initialDelaySeconds: 60
          periodSeconds: 15
          successThreshold: 2
          failureThreshold: 2
          timeoutSeconds: 5
        ports:
          - containerPort: 8080
            name: jiraport
          - containerPort: 40001
            name: jiraclusterport
        volumeMounts:
        - name: jira-pvc-data
          mountPath: "/var/atlassian/application-data/jira"
        - name: jira-pvc-shared
          mountPath: "/var/atlassian/shared"
      volumes:
        - name: jira-pvc-data
          emptyDir:
            {}
        - name: jira-pvc-shared
          persistentVolumeClaim:
            claimName: jira-pvc-shared
