jira-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jira-st-ingress
  namespace: jira
spec:
  tls:
  - hosts:
      - jira.kubernetes.local
    secretName: default/kubernetes.local
  rules:
  - host: jira.kubernetes.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: jira-set
            port:
              number: 8080
